@@ -117,6 +117,11 @@ invoking the compiler.</p>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">sourcepath</td>
+    <td valign="top">the sourcepath to use; defaults to the value of the srcdir attribute (or <code>&lt;src&gt;</code> elements).</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
     <td valign="top">bootclasspath</td>
     <td valign="top">location of bootstrap class files.</td>
     <td align="center" valign="top">No</td>
@@ -124,6 +129,12 @@ invoking the compiler.</p>
   <tr>
     <td valign="top">classpathref</td>
     <td valign="top">the classpath to use, given as a
+      <a href="../using.html#references">reference</a> to a PATH defined elsewhere.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">sourcepathref</td>
+    <td valign="top">the sourcepath to use, given as a
       <a href="../using.html#references">reference</a> to a PATH defined elsewhere.</td>
     <td align="center" valign="top">No</td>
   </tr>
@@ -255,14 +266,16 @@ supports all attributes of <code>&lt;fileset&gt;</code>
 (<code>dir</code> becomes <code>srcdir</code>) as well as the nested
 <code>&lt;include&gt;</code>, <code>&lt;exclude&gt;</code> and
 <code>&lt;patternset&gt;</code> elements.</p>
-<h4><code>src</code>, <code>classpath</code>, <code>bootclasspath</code> and <code>extdirs</code></h4>
+<h4><code>src</code>, <code>classpath</code>, <code>sourcepath</code>, 
+<code>bootclasspath</code> and <code>extdirs</code></h4>
 <p><code>Javac</code>'s <i>srcdir</i>, <i>classpath</i>,
-<i>bootclasspath</i> and <i>extdirs</i> attributes are <a
+<i>sourcepath</i>, <i>bootclasspath</i> and <i>extdirs</i> attributes are <a
 href="../using.html#path">path-like structures</a> and can also be set via nested
-<code>&lt;src&gt</code>,
-<code>&lt;classpath&gt</code>,
-<code>&lt;bootclasspath&gt</code> and
-<code>&lt;extdirs&gt</code> elements, respectively.</p>
+<code>&lt;src&gt;</code>,
+<code>&lt;classpath&gt;</code>,
+<code>&lt;sourcepath&gt;</code>,
+<code>&lt;bootclasspath&gt;</code> and
+<code>&lt;extdirs&gt;</code> elements, respectively.</p>
 
 <h4>compilerarg</h4>
 
@@ -425,7 +438,7 @@ build.compiler.warnings is &quot;true&quot; while all others are &quot;false&quo
   </tr>
 </table>
 <hr>
-<p align="center">Copyright &copy; 2001 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2001-2002 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
